FindBugs and some automated cleanups.